Fix extra padding on features container

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -5,8 +5,10 @@ html {
   font-size: 16px;
 }
 
+
 .main-content {
   position: relative;
+  width: 100%;
   top: 5.3125rem; /* To offset for fixed header. */
 }
 
@@ -38,10 +40,10 @@ html {
 
 header {
   position: fixed;
-  width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   z-index: 10;
+  width: 100%;
   /* height: 85px; */
 }
 
@@ -51,6 +53,7 @@ header .content {
   padding: 1.875rem;
 }
 
+
 header .logo {
   flex: 1;
   color: #4a4a4a;
@@ -58,6 +61,7 @@ header .logo {
 
 header nav ul {
   display: flex;
+  width: 100;
 }
 
 nav li {
@@ -223,16 +227,16 @@ header .mobile {
 #features-section {
   display: flex;
   justify-content: space-between;
-  padding: 4rem 5%;
+  padding: auto 4rem;
   background-color: #f3f3f3;
   width: 100%;
 }
 
 .feature {
   flex: 1;
-  padding: 2rem;
-  margin: 0px 1.25rem;
   background-color: white;
+  width: 100%;
+  height: 635px;
 }
 
 .feature .image-container {
@@ -240,7 +244,9 @@ header .mobile {
   height: 65%;
   margin: 0 auto;
   overflow: hidden;
+  margin: 32px 32px 40px 32px;
 }
+
 .image-container img {
   display: block;
   max-width: 100%;
